# figma-write-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  SECURITY.md  SMOKE_TEST.md  dprint.json  justfile
.github/workflows/: ci.yml  release.yml
_dev/reviews/001/: critical_analysis.md  improvements.md
plugin/: bunfig.toml  code.ts  helpers.test.ts  helpers.ts  manifest.json  package.json  tsconfig.json  tsconfig.test.json  ui.html
server/: Cargo.toml
server/src/: main.rs
